# $Id$

Version 2.3.1 - 2010/05/18 - SVN r*** (postfixadmin-2.3 branch)
---------------------------------------------------------------

  - SUMMARY: PostfixAdmin 2.3.1 is a bugfix-only release for Postfix Admin 2.3.
    The only visible change is displaying the alias target for mailboxes which
    was a longstanding issue/"missing feature".
    The ADDITIONS directory contains some new scripts.
  - display alias targets for mailboxes (if $CONF['special_alias_control'] = YES)
  - add hook for custom maildir path generation
  - add import_users_from_csv.py script (by Simone Piccardi)
  - add mailbox_post* scripts for cyrus
  - handle dovecot passwords without any tempfile (prevents safe_mode issues)
  - fix MySQL 6.0 compatibility
  - fix quota display (for dovecot >= 1.2)
  - fix short open tags ("<?")
  - translation updates and fixes
  - documentation updates and fixes
  - document commandline parameters for $CONF[*_script] options in config.inc.php
  - list-virtual: added error message if the check_owner query returns more
    than one result (can happen with pre-2.3 databases and prevents access for
    superadmins)
  - add in_array() check to avoid that superadmins can enter invalid domains
  - fix delete link for alias domains (when on target domain)
  - fix hardcoded table names in list-domain.php
  - fixed edit-alias.php not to drop alias to the mailbox if
    special_alias_control = NO
  - fix typo in upgrade.php that broke index creation and deletion when using
    non-default table names
  - fix creating 'ALL' domain (dummy for superadmins) when using non-default
    table names
  - check for $CONF['encrypt'] = 'dovecot:md5-crypt' (postfixadmin login not
    working because dovecotpw uses a new salt each time), recommend
    internal md5crypt instead
  - replaced terribly outdated, broken squirrelmail plugin with a fresh version.
    Note: The new plugin version requires the Zend framework.

Version 2.3 - 2009/10/24 - SVN r739